<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8BDBD"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="259dp"
        android:layout_height="37dp"
        android:layout_marginTop="48dp"
        android:text="@string/num1"
        android:textColor="#FF0000"
        android:fontFamily="@font/baloo_bhai_2_semibold"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="270dp"
        android:layout_height="37dp"
        android:layout_marginTop="168dp"
        android:text="@string/num2"
        android:textColor="#FF0000"
        android:fontFamily="@font/baloo_bhai_2_semibold"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="296dp"
        android:text="@string/result"

        android:textColor="#6F3BFF"
        android:fontFamily="@font/baloo_bhai_2_semibold"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textView6"
        android:layout_width="259dp"
        android:layout_height="40dp"
        android:layout_marginTop="108dp"
        android:background="@color/teal_200"

        android:inputType="numberDecimal"
        android:text="@string/number1"
        android:fontFamily="@font/baloo_bhai_2_semibold"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textView7"
        android:layout_width="259dp"
        android:layout_height="40dp"
        android:layout_marginTop="228dp"
        android:background="@color/teal_200"


        android:inputType="numberDecimal"
        android:text="@string/number2"
        android:fontFamily="@font/baloo_bhai_2_semibold"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="259dp"
        android:layout_height="40dp"
        android:layout_marginTop="352dp"

        android:background="#EF8958"

        android:text="@string/sum"

        android:textColor="#E91E63"
        android:fontFamily="@font/baloo_bhai_2_semibold"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="136dp"
        android:onClick="add"
        android:text="@string/add"
        android:textColor="#F4E345"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sub"
        android:text="@string/sub"
        android:textColor="#F4E345"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button5"
        app:layout_constraintStart_toStartOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintVertical_bias="0.251" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="mul"
        android:text="@string/mul"
        android:textColor="#F4E345"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.264" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="52dp"
        android:onClick="div"
        android:text="@string/div"

        android:textColor="#F4E345"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

</androidx.constraintlayout.widget.ConstraintLayout>